typescript/checker/tests/conformance/controlFlow/controlFlowForInStatement.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            5,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/controlFlow/controlFlowForInStatement.ts:1:5
  |
1 | let x: string | number | boolean | RegExp | Function;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            72,
        ),
        hi: BytePos(
            76,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/controlFlow/controlFlowForInStatement.ts:3:5
  |
3 | let cond: boolean;
  |     ^^^^

error: unimplemented
expand_export_info(RegExp)
File: $DIR/tests/conformance/controlFlow/controlFlowForInStatement.ts
 --> $DIR/tests/conformance/controlFlow/controlFlowForInStatement.ts:5:1
  |
5 | x = /a/;
  | ^^^^^^^

